修改登录界面

--- a/src/main/resources/templates/admin/blog/blog-link.html
+++ b/src/main/resources/templates/admin/blog/blog-link.html
@@ -44,9 +44,9 @@
                     <p>我的邮箱是908665908@qq.com, 格式要求如下:
                     </p>
                     <ul>
-                        <li>网站名称：ppblog</li>
-                        <li>网站链接：http://ppblog.site</li>
-                        <li>网站描述：pp的个人博客</li>
+                        <li>网站名称：xxxx</li>
+                        <li>网站链接：http://xxx.xxx</li>
+                        <li>网站描述：xxxx</li>
                     </ul>
 
                     <p>请保证自己的链接长期有效,不然可能会被清理.</p>
