--- a/src/main/resources/templates/admin/blog/blogCom.html
+++ b/src/main/resources/templates/admin/blog/blogCom.html
@@ -16,7 +16,7 @@
         <h1 class="logo pull-left">
             <a th:href="@{/admin/index}">
                 <img th:src="@{/admin/plugins/blog/img/logo.png}" alt="" class="logo-img">
-                <span style="color:#fff">哈哈</span>
+                <span style="color:#fff">管理后台</span>
             </a>
         </h1>
         <form class="layui-form blog-seach pull-left" action="">
