--- a/src/main/resources/templates/admin/common.html
+++ b/src/main/resources/templates/admin/common.html
@@ -4,7 +4,7 @@
 <head th:fragment="common-head">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>YC blog 博客管理系統</title>
+    <title>后台管理系統</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- Styles -->
     <link rel="stylesheet" th:href="@{/admin/plugins/bootstrap/css/bootstrap.min.css}">
@@ -19,7 +19,7 @@
 <!--公共nav区域-->
 <div class="navbar navbar-static-top" th:fragment="common-nav">
     <div class="navbar-inner">
-        <a class="brand" th:href="@{/admin/blog/index}">YcBlog</a>
+        <a class="brand" th:href="@{/admin/blog/index}">主页</a>
         <ul class="nav">
             <li id="menu-icon"><a class="menu-icon" href="#"><i class="icon-reorder"></i></a></li>
             <li class="dropdown">
@@ -34,7 +34,7 @@
                                 <div class="span8 details">
                                     <small>Welcome to YcBlog!</small>
                                     <ul class="unstyled">
-                                        <li><a href="#"><small>姓名：YC</small></a></li>
+                                        <li><a href="#"><small>姓名：娃哈哈</small></a></li>
                                         <li><a href="#"><small>职称：Java开发工程师</small></a></li>
                                         <li><a href="#"><small>邮箱：908665908@qq.com</small></a></li>
                                     </ul>
@@ -87,7 +87,7 @@
 <div class="container-fluid footer" th:fragment="common-foot">
     <div class="row-fluid">
         <div class="span12">
-            <p class="pull-right"><strong>Copyright &copy; 2019 <a href="##">yc-blog.top</a>.</strong>
+            <p class="pull-right"><strong>Copyright &copy; 2019 <a href="##">xxxx</a>.</strong>
                 All rights reserved.</p>
         </div>
     </div>
